--- a/index.html
+++ b/index.html
@@ -93,13 +93,15 @@
 		<main class="main">
 			<section class="hero">
 				<div class="container-fluid h-100">
-					<div class="row animate-in-down">
+					<div
+						class="flex-column-reverse flex-lg-row flex-md-row row animate-in-down"
+					>
 						<div
 							class="d-flex col-md-6 align-self-center justify-content-center text-color text-center text-lg-start"
 						>
 							<div class="hero__content">
 								<h1>Nowoczesna aranżacja Twojego ogrodu</h1>
-								<p class="my-4">
+								<p class="my-sm-1 my-lg-4">
 									Marka GiardDesign to wieloletnie
 									doświadczenie i wysoka estetyka realizacji.
 									Oferujemy kompleksowy zakres usług z
@@ -122,28 +124,6 @@
 								id="carouselExampleIndicators"
 								class="carousel slide"
 							>
-								<div class="carousel-indicators">
-									<button
-										type="button"
-										data-bs-target="#carouselExampleIndicators"
-										data-bs-slide-to="0"
-										class="active"
-										aria-current="true"
-										aria-label="Slide 1"
-									></button>
-									<button
-										type="button"
-										data-bs-target="#carouselExampleIndicators"
-										data-bs-slide-to="1"
-										aria-label="Slide 2"
-									></button>
-									<button
-										type="button"
-										data-bs-target="#carouselExampleIndicators"
-										data-bs-slide-to="2"
-										aria-label="Slide 3"
-									></button>
-								</div>
 								<div class="carousel-inner">
 									<div class="carousel-item active">
 										<img
@@ -161,7 +141,7 @@
 									</div>
 									<div class="carousel-item">
 										<img
-											src="./images/photo-5.jpg"
+											src="./images/photo-11.jpg"
 											class="d-block w-100"
 											alt="..."
 										/>
@@ -193,6 +173,130 @@
 									></span>
 									<span class="visually-hidden">Next</span>
 								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="offer">
+				<div class="container-lg">
+					<div
+						class="offer__content d-flex flex-column p-4 col-md-6 align-self-center text-color text-center text-lg-start align-items-center align-items-lg-start justify-content-lg-start"
+					>
+						<p class="m-0">Oferta</p>
+						<h2>Działamy kompleksowo</h2>
+						<p class="offer__paragraph my-3 w-5">
+							Oferujemy kompletną obsługę inwestycji terenów
+							zielonych. Projektujemy nowoczesne ogrody przydomowe
+							oraz rezydencjonalne. Stworzymy dla Ciebie projekt,
+							zwizualizujemy go i wcielimy w życie, a na każdym
+							etapie posłużymy radą i wieloletnim doświadczeniem.
+						</p>
+					</div>
+				</div>
+				<div class="container">
+					<div
+						class="cards row row-cols-1 row-cols-md-2 row-cols-sm-1 row-cols-lg-3 g-4"
+					>
+						<div
+							class="col d-flex align-items-center justify-content-center"
+						>
+							<div
+								class="offer__card card text-center text-lg-start"
+							>
+								<div class="card-body">
+									<i class="bi bi-pencil-fill"></i>
+									<h3 class="card-title">Projekty</h3>
+									<p class="card-text">
+										Zaprojektujemy Twój ogród w nowoczesnym
+										stylu i z najlepszym wykorzystaniem
+										istniejącej przestrzeni.
+									</p>
+									<a href="#" class="card-link text-success"
+										>Dowiedz się więcej
+										<i class="bi bi-arrow-right"></i
+									></a>
+								</div>
+							</div>
+						</div>
+						<div
+							class="col d-flex align-items-center justify-content-center"
+						>
+							<div
+								class="offer__card card text-center text-lg-start"
+							>
+								<div class="card-body">
+									<i class="bi bi-eye-fill"></i>
+									<h3 class="card-title">Wizualizacje</h3>
+									<p class="card-text">
+										Przedstawimy Ci projekty koncepcyjne w
+										postaci wirtualnego spaceru animowanego
+										w technologii 3D.
+									</p>
+									<a href="#" class="card-link text-success"
+										>Dowiedz się więcej
+										<i class="bi bi-arrow-right"></i
+									></a>
+								</div>
+							</div>
+						</div>
+						<div
+							class="col d-flex align-items-center justify-content-center"
+						>
+							<div
+								class="offer__card card text-center text-lg-start"
+							>
+								<div class="card-body">
+									<i class="bi bi-stars"></i>
+									<h3 class="card-title">Realizacje</h3>
+									<p class="card-text">
+										Zrealizujemy Twoje marzenie przy użyciu
+										najnowszych rozwiązań i zaawansowanych
+										technologii.
+									</p>
+									<a href="#" class="card-link text-success"
+										>Zobacz nasze realizacje
+										<i class="bi bi-arrow-right"></i
+									></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="about">
+				<div class="container-fluid p-0">
+					<div class="card mb-3">
+						<div class="row g-0">
+							<div class="col-md-6">
+								<img
+									src="./images/photo-3.jpg"
+									class="img-fluid rounded-start"
+									alt="..."
+								/>
+							</div>
+							<div class="about__right col-md-4 text-light">
+								<div class="about__content">
+									<div
+										class="card-body d-flex flex-column align-items-start justify-content-center"
+									>
+										<p class="card-text">O firmie</p>
+										<h4 class="card-title">Card title</h4>
+										<p class="card-text">
+											Każdy projekt to nowe wyzwanie.
+											Dlatego nasz zespół tworzą
+											wykwalifikowani projektanci oraz
+											architekci, których zadaniem jest
+											rozpoznanie i realizacja potrzeb
+											każdego Klienta. Nasza specjalizacja
+											to przestrzenie nowoczesne, które
+											charakteryzuje minimalizm, geometria
+											i elegancka prostota. Tworzymy
+											ogrody małoobsługowe, dostosowane do
+											współczesnego trybu życia.
+										</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
