--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 							<div class="about__right col-md-4 text-light">
 								<div class="about__content">
 									<div
-										class="card-body d-flex flex-column align-items-start justify-content-center"
+										class="card-body d-flex flex-column align-items-md-start align-items-sm-center justify-content-center"
 									>
 										<p class="card-text">O firmie</p>
 										<h4 class="card-title">Card title</h4>
