--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 			</section>
 			<section class="about">
 				<div class="container-fluid p-0">
-					<div class="card mb-3">
+					<div class="card">
 						<div class="row g-0">
 							<div class="col-md-6">
 								<img
@@ -281,7 +281,9 @@
 										class="card-body d-flex flex-column align-items-md-start align-items-sm-center justify-content-center"
 									>
 										<p class="card-text">O firmie</p>
-										<h4 class="card-title">Card title</h4>
+										<h4 class="card-title">
+											Tworzymy z pasją
+										</h4>
 										<p class="card-text">
 											Każdy projekt to nowe wyzwanie.
 											Dlatego nasz zespół tworzą
@@ -295,6 +297,12 @@
 											ogrody małoobsługowe, dostosowane do
 											współczesnego trybu życia.
 										</p>
+										<a
+											href="#"
+											class="about__customButtonPadding btn btn-outline-light rounded-5"
+											>Poznaj nas bliżej
+											<i class="bi bi-arrow-right"></i
+										></a>
 									</div>
 								</div>
 							</div>
@@ -302,6 +310,129 @@
 					</div>
 				</div>
 			</section>
+			<section class="projects">
+				<div class="container">
+					<div class="projects__top">
+						<span>Realizacje</span>
+						<h2>Nasze Projekty</h2>
+					</div>
+					<div class="grid">
+						<div class="grid-item">
+							<img
+								src="./images/photo-1.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-2.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-3.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-4.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-5.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-6.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-7.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-8.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-9.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-10.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-11.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-12.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-13.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-14.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-15.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+						<div class="grid-item">
+							<img
+								src="./images/photo-16.jpg"
+								alt=""
+								class="w-25"
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
+		<script src="./script.js"></script>
 	</body>
 </html>
