--- a/index.html
+++ b/index.html
@@ -316,123 +316,60 @@
 						<span>Realizacje</span>
 						<h2>Nasze Projekty</h2>
 					</div>
+				</div>
+				<div class="container-fluid">
 					<div class="grid">
 						<div class="grid-item">
-							<img
-								src="./images/photo-1.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-1.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-2.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-2.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-3.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-3.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-4.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-4.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-5.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-5.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-6.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-6.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-7.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-7.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-8.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-8.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-9.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-9.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-10.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-10.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-11.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-11.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-12.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-12.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-13.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-13.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-14.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-14.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-15.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-15.jpg" alt="" />
 						</div>
 						<div class="grid-item">
-							<img
-								src="./images/photo-16.jpg"
-								alt=""
-								class="w-25"
-							/>
+							<img src="./images/photo-16.jpg" alt="" />
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
-		<script src="./script.js"></script>
 	</body>
 </html>
