--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 	</head>
 	<body>
 		<header class="mainHeader d-flex justify-content-center">
@@ -317,9 +318,10 @@
 						<h2>Nasze Projekty</h2>
 					</div>
 				</div>
-				<div class="container-fluid">
+				<div class="bla container-fluid">
 					<div class="grid">
-						<div class="grid-item">
+						<div class="grid-sizer"></div>
+						<div class="grid-item grid-item--height1">
 							<img src="./images/photo-1.jpg" alt="" />
 						</div>
 						<div class="grid-item">
@@ -328,18 +330,14 @@
 						<div class="grid-item">
 							<img src="./images/photo-3.jpg" alt="" />
 						</div>
-						<div class="grid-item">
-							<img src="./images/photo-4.jpg" alt="" />
-						</div>
+
 						<div class="grid-item">
 							<img src="./images/photo-5.jpg" alt="" />
 						</div>
 						<div class="grid-item">
 							<img src="./images/photo-6.jpg" alt="" />
 						</div>
-						<div class="grid-item">
-							<img src="./images/photo-7.jpg" alt="" />
-						</div>
+
 						<div class="grid-item">
 							<img src="./images/photo-8.jpg" alt="" />
 						</div>
@@ -352,24 +350,10 @@
 						<div class="grid-item">
 							<img src="./images/photo-11.jpg" alt="" />
 						</div>
-						<div class="grid-item">
-							<img src="./images/photo-12.jpg" alt="" />
-						</div>
-						<div class="grid-item">
-							<img src="./images/photo-13.jpg" alt="" />
-						</div>
-						<div class="grid-item">
-							<img src="./images/photo-14.jpg" alt="" />
-						</div>
-						<div class="grid-item">
-							<img src="./images/photo-15.jpg" alt="" />
-						</div>
-						<div class="grid-item">
-							<img src="./images/photo-16.jpg" alt="" />
-						</div>
 					</div>
 				</div>
 			</section>
 		</main>
+		<script type="module" src="script.js"></script>
 	</body>
 </html>
