--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link
+			rel="shortcut icon"
+			href="/images/logo-white.svg"
+			type="image/x-icon"
+		/>
 		<title>GiardDesign</title>
 		<script
 			defer
@@ -48,20 +53,20 @@
 								>
 									Oferta
 								</a>
-								<ul class="dropdown-menu d-none">
+								<ul class="dropdown-menu">
 									<li>
 										<a class="dropdown-item" href="#"
-											>Action</a
+											>Wizualicacje</a
 										>
 									</li>
 									<li>
 										<a class="dropdown-item" href="#"
-											>Another action</a
+											>Projekty</a
 										>
 									</li>
 									<li>
 										<a class="dropdown-item" href="#"
-											>Something else here</a
+											>Realizacje</a
 										>
 									</li>
 								</ul>
@@ -70,7 +75,9 @@
 								<a class="nav-link" href="#">O firmie</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Realizacje</a>
+								<a class="nav-link" href="#implementation"
+									>Realizacje</a
+								>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Kontakt</a>
@@ -258,7 +265,9 @@
 										najnowszych rozwiązań i zaawansowanych
 										technologii.
 									</p>
-									<a href="#" class="card-link text-success"
+									<a
+										href="#implementation"
+										class="card-link text-success"
 										>Zobacz nasze realizacje
 										<i class="bi bi-arrow-right"></i
 									></a>
@@ -276,7 +285,7 @@
 								<img
 									src="./images/photo-3.jpg"
 									class="img-fluid rounded-start"
-									alt="..."
+									alt="Photo in background"
 								/>
 							</div>
 							<div class="about__right col-md-4 text-light">
@@ -314,7 +323,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="projects">
+			<section class="projects" id="implementation">
 				<div class="container">
 					<div class="projects__top">
 						<span>Realizacje</span>
@@ -325,34 +334,34 @@
 					<div class="grid">
 						<div class="grid-sizer"></div>
 						<div class="grid-item grid-item--height1">
-							<img src="./images/photo-2.jpg" alt="" />
+							<img src="./images/photo-2.jpg" alt="photo 2" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-8.jpg" alt="" />
+							<img src="./images/photo-8.jpg" alt="photo 8" />
 						</div>
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-7.jpg" alt="" />
+							<img src="./images/photo-7.jpg" alt="photo 7" />
 						</div>
 
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-12.jpg" alt="" />
+							<img src="./images/photo-12.jpg" alt="photo 2" />
 						</div>
 						<div class="grid-item grid-item--height1">
-							<img src="./images/photo-1.jpg" alt="" />
+							<img src="./images/photo-1.jpg" alt="photo 1" />
 						</div>
 
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-11.jpg" alt="" />
+							<img src="./images/photo-11.jpg" alt="photo 11" />
 						</div>
 
 						<div class="grid-item">
-							<img src="./images/photo-5.jpg" alt="" />
+							<img src="./images/photo-5.jpg" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-10.jpg" alt="" />
+							<img src="./images/photo-10.jpg" alt="photo 10" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-6.jpg" alt="" />
+							<img src="./images/photo-6.jpg" alt="photo 6" />
 						</div>
 					</div>
 				</div>
@@ -387,7 +396,97 @@
 					</button>
 				</div>
 			</section>
+			<section class="social">
+				<div
+					class="social__wrapper d-flex align-items-end align-items-sm-center justify-content-center flex-column flex-lg-row container-lg bg-success text-light"
+				>
+					<div class="social__contentLeft">
+						<h4>
+							Zostańmy w kontakcie!<br />
+							Znajdziesz nas na <span>Instagramie</span>.
+						</h4>
+					</div>
+					<div class="social__contentRight">
+						<p>
+							Śledź nasze <br />
+							najnowsze realizacje!
+						</p>
+						<a
+							href="#"
+							class="social__button btn btn-light rounded-5"
+							>Instagram</a
+						>
+					</div>
+				</div>
+			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer__wrapper container d-flex flex-column">
+				<div
+					class="footer__top d-flex align-items-center justify-content-center justify-content-lg-between flex-column flex-lg-row text-center p-4"
+				>
+					<div class="footer__topLeft">
+						<a href="#"><img src="/images/logo-white.svg" /></a>
+					</div>
+					<div
+						class="footer__topRight d-flex flex-column flex-lg-row align-items-center m-0"
+					>
+						<p class="m-0">
+							Daj znać, co możemy dla Ciebie zrobić!
+						</p>
+						<a href="#" class="btn btn-success rounded-5"
+							>Skontaktuj się z nami</a
+						>
+					</div>
+				</div>
+				<hr />
+				<div
+					class="footer__links d-flex flex-column flex-lg-row align-items-center justify-content-between"
+				>
+					<ul class="footer__nav nav justify-content-start pb-0 mb-3">
+						<li class="nav-item">
+							<a href="#" class="nav-link px-2 text-light"
+								>Kontakt</a
+							>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link px-2 text-light"
+								>Instagram</a
+							>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link px-2 text-light"
+								>Facebook</a
+							>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link px-2 text-light"
+								>LinkedIn</a
+							>
+						</li>
+					</ul>
+					<div
+						class="footer__contact d-flex align-items-center flex-column flex-lg-row"
+					>
+						<p>000-000-000</p>
+						<p>giarddesign@kontakt.pl</p>
+					</div>
+				</div>
+				<div
+					class="footer__bottom d-flex align-items-center justify-content-between"
+				>
+					<p>Prawa zastrzeżone &copy; 2022</p>
+					<p>
+						made by
+						<a href="https://adrespect.pl/" target="_blank"
+							><img
+								src="/images/logo-full-light.svg"
+								alt="logo adrespect"
+						/></a>
+					</p>
+				</div>
+			</div>
+		</footer>
 		<script type="module" src="script.js"></script>
 	</body>
 </html>
