--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 										>
 									</li>
 									<li>
-										<a class="dropdown-item" href="#"
+										<a
+											class="dropdown-item"
+											href="#implementation"
 											>Realizacje</a
 										>
 									</li>
@@ -83,16 +85,22 @@
 								<a class="nav-link" href="#">Kontakt</a>
 							</li>
 							<li class="nav-item">
-								<i class="bi bi-search"></i>
+								<i class="search--btn bi bi-search"></i>
 							</li>
 						</ul>
-						<form class="navbar__form d-none" role="search">
-							<input
-								class="form-control me-2"
-								type="search"
-								placeholder="Szukaj"
-								aria-label="Szukaj"
-							/>
+						<form class="navbar__form" role="search">
+							<label for="searchInp">
+								<input
+									class="navbar__form--input form-control me-2"
+									type="search"
+									placeholder="Szukaj"
+									aria-label="Szukaj"
+									id="searchInp"
+								/>
+								<span
+									><i class="search--close bi bi-search"></i
+								></span>
+							</label>
 						</form>
 					</div>
 				</div>
@@ -130,42 +138,39 @@
 						<div class="p-0 col-md-6">
 							<div
 								id="carouselExampleIndicators"
-								class="carousel slide"
+								class="carousel slide position-relative"
 							>
 								<div class="carousel-inner">
 									<div class="carousel-item active">
 										<img
 											src="./images/photo-9.jpg"
 											class="d-block w-100"
-											alt="..."
-											lazy
+											alt="Photo 9"
 										/>
 									</div>
 									<div class="carousel-item">
 										<img
 											src="./images/photo-1.jpg"
 											class="d-block w-100"
-											alt="..."
-											lazy
+											alt="Photo 1"
 										/>
 									</div>
 									<div class="carousel-item">
 										<img
 											src="./images/photo-11.jpg"
 											class="d-block w-100"
-											alt="..."
-											lazy
+											alt="Photo 11"
 										/>
 									</div>
 								</div>
 								<button
-									class="carousel-control-prev"
+									class="carousel-control-prev-hero"
 									type="button"
 									data-bs-target="#carouselExampleIndicators"
 									data-bs-slide="prev"
 								>
 									<span
-										class="carousel-control-prev-icon"
+										class="carousel-control-prev-hero-icon"
 										aria-hidden="true"
 									></span>
 									<span class="visually-hidden"
@@ -173,13 +178,13 @@
 									>
 								</button>
 								<button
-									class="carousel-control-next"
+									class="carousel-control-next-hero"
 									type="button"
 									data-bs-target="#carouselExampleIndicators"
 									data-bs-slide="next"
 								>
 									<span
-										class="carousel-control-next-icon"
+										class="carousel-control-next-hero-icon"
 										aria-hidden="true"
 									></span>
 									<span class="visually-hidden">Next</span>
@@ -363,28 +368,186 @@
 						<div class="grid-item">
 							<img src="./images/photo-6.jpg" alt="photo 6" />
 						</div>
+						<div class="grid__lower">
+							<div class="grid-item">
+								<img
+									src="./images/photo-6.jpg"
+									alt="photo 13"
+								/>
+							</div>
+							<div class="grid-item">
+								<img
+									src="./images/photo-13.jpg"
+									alt="photo 6"
+								/>
+							</div>
+							<div class="grid-item">
+								<img
+									src="./images/photo-14.jpg"
+									alt="photo 14"
+								/>
+							</div>
+							<div class="grid-item">
+								<img
+									src="./images/photo-15.jpg"
+									alt="photo 16"
+								/>
+							</div>
+							<div class="grid-item">
+								<img
+									src="./images/photo-16.jpg"
+									alt="photo 16"
+								/>
+							</div>
+						</div>
 					</div>
 				</div>
-
 				<div
 					class="modal fade"
 					id="staticBackdrop"
 					data-bs-backdrop="static"
 					data-bs-keyboard="false"
-					tabindex="-1"
+					tabindex="2"
 					aria-labelledby="staticBackdropLabel"
 					aria-hidden="true"
 				>
 					<i class="bi bi-x-lg" data-bs-dismiss="modal"></i>
-
+					<button
+						class="carousel-control-prev"
+						type="button"
+						data-bs-target="#carouselExampleControls"
+						data-bs-slide="prev"
+					>
+						<span
+							class="carousel-control-prev-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button
+						class="carousel-control-next"
+						type="button"
+						data-bs-target="#carouselExampleControls"
+						data-bs-slide="next"
+					>
+						<span
+							class="carousel-control-next-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 					<div
 						class="modal-dialog modal-dialog-centered justify-content-center"
 					>
-						<img
-							src="images/photo-1.jpg"
-							alt="full screen image"
-							class="modalImage"
-						/>
+						<div
+							id="carouselExampleControls"
+							class="carousel carousel-dark slide"
+						>
+							<div class="carousel-inner">
+								<div class="modalCarusel carousel-item active">
+									<img src="./images/photo-2.jpg" alt="" />
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-3.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-5.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-6.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-7.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-8.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-9.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-10.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-11.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-12.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-13.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-14.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-15.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-16.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/photo-17.jpg"
+										class="modalImage"
+										alt="..."
+									/>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="projects__fade">
