--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
 									<div class="carousel-item active">
 										<img
 											src="./images/photo-9.jpg"
-											class="d-block w-100"
+											class="d-block object-fit-cover w-100"
 											alt="Photo 9"
 										/>
 									</div>
 									<div class="carousel-item">
 										<img
 											src="./images/photo-1.jpg"
-											class="d-block w-100"
+											class="d-block object-fit-cover w-100"
 											alt="Photo 1"
 										/>
 									</div>
 									<div class="carousel-item">
 										<img
 											src="./images/photo-11.jpg"
-											class="d-block w-100"
+											class="d-block object-fit-cover w-100"
 											alt="Photo 11"
 										/>
 									</div>
@@ -289,7 +289,7 @@
 							<div class="col-md-6">
 								<img
 									src="./images/photo-3.jpg"
-									class="img-fluid rounded-start"
+									class="about__bg img-fluid rounded-start object-fit-cover"
 									alt="Photo in background"
 								/>
 							</div>
