--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<section class="hero">
 				<div class="container-fluid h-100">
 					<div
-						class="flex-column-reverse flex-lg-row flex-md-row row animate-in-down"
+						class="flex-lg-row flex-md-row row animate-in-down hero__custom"
 					>
 						<div
 							class="d-flex col-md-6 align-self-center justify-content-center text-color text-center text-lg-start"
