--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			href="/images/logo-white.svg"
 			type="image/x-icon"
 		/>
+
 		<title>GiardDesign</title>
 		<script
 			defer
@@ -107,94 +108,151 @@
 			</nav>
 		</header>
 		<main class="main">
-			<section class="hero">
-				<div class="container-fluid h-100">
-					<div
-						class="flex-lg-row flex-md-row row animate-in-down hero__custom"
-					>
-						<div
-							class="d-flex col-md-6 align-self-center justify-content-center text-color text-center text-lg-start"
-						>
-							<div class="hero__content">
-								<h1>Nowoczesna aranżacja Twojego ogrodu</h1>
-								<p class="my-sm-1 my-lg-4">
-									Marka GiardDesign to wieloletnie
-									doświadczenie i wysoka estetyka realizacji.
-									Oferujemy kompleksowy zakres usług z
-									indywidualnym podejściem do każdego
-									projektu.
-								</p>
-								<a href="#" class="btn mb-3 p-2 btn-success"
-									>Skontaktuj się z nami</a
-								>
-								<a
-									href="#"
-									class="btn mb-3 p-2 btn-outline-success"
-									>Zobacz nasze realizacje
-									<i class="bi bi-arrow-down"></i
-								></a>
-							</div>
-						</div>
-						<div class="p-0 col-md-6">
-							<div
-								id="carouselExampleIndicators"
-								class="carousel slide position-relative"
-							>
-								<div class="carousel-inner">
-									<div class="carousel-item active">
-										<img
-											src="./images/photo-9.jpg"
-											class="d-block object-fit-cover w-100"
-											alt="Photo 9"
-										/>
-									</div>
-									<div class="carousel-item">
-										<img
-											src="./images/photo-1.jpg"
-											class="d-block object-fit-cover w-100"
-											alt="Photo 1"
-										/>
-									</div>
-									<div class="carousel-item">
-										<img
-											src="./images/photo-11.jpg"
-											class="d-block object-fit-cover w-100"
-											alt="Photo 11"
-										/>
+			<section class="hero hidden">
+				<div class="container-fluid h-100 p-0">
+					<div id="carouselExample" class="carousel slide">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="card">
+									<div class="row g-0">
+										<div
+											class="hero__left col-md-6 d-flex align-items-center justify-content-center"
+										>
+											<div class="hero__content">
+												<div
+													class="hero__content--body card-body d-flex flex-column align-items-md-start align-items-sm-center justify-content-center"
+												>
+													<h1 class="card-title">
+														Nowoczesna aranżacja
+														Twojego ogrodu
+													</h1>
+													<p class="card-text">
+														Marka GiardDesign to
+														wieloletnie
+														doświadczenie i wysoka
+														estetyka realizacji.
+														Oferujemy kompleksowy
+														zakres usług z
+														indywidualnym podejściem
+														do każdego projektu.
+													</p>
+													<div class="hero__buttons">
+														<a
+															href="#"
+															class="btn mb-3 p-2 btn-success"
+															>Skontaktuj się z
+															nami</a
+														>
+														<a
+															href="#"
+															class="btn mb-3 p-2 btn-outline-success"
+															>Zobacz nasze
+															realizacje
+															<i
+																class="bi bi-arrow-down"
+															></i
+														></a>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div
+											class="hero__right col-md-6 text-light"
+										>
+											<img
+												src="./images/photo-9.jpg"
+												class="d-block object-fit-cover w-100"
+												alt="Photo in background"
+											/>
+										</div>
 									</div>
 								</div>
-								<button
-									class="carousel-control-prev-hero"
-									type="button"
-									data-bs-target="#carouselExampleIndicators"
-									data-bs-slide="prev"
-								>
-									<span
-										class="carousel-control-prev-hero-icon"
-										aria-hidden="true"
-									></span>
-									<span class="visually-hidden"
-										>Previous</span
-									>
-								</button>
-								<button
-									class="carousel-control-next-hero"
-									type="button"
-									data-bs-target="#carouselExampleIndicators"
-									data-bs-slide="next"
-								>
-									<span
-										class="carousel-control-next-hero-icon"
-										aria-hidden="true"
-									></span>
-									<span class="visually-hidden">Next</span>
-								</button>
+							</div>
+							<div class="carousel-item">
+								<div class="card">
+									<div class="row g-0">
+										<div
+											class="hero__left col-md-6 d-flex align-items-center justify-content-center"
+										>
+											<div class="hero__content">
+												<div
+													class="hero__content--body card-body d-flex flex-column align-items-md-start align-items-sm-center justify-content-center"
+												>
+													<h1 class="card-title">
+														Nowoczesna aranżacja
+														Twojego ogrodu
+													</h1>
+													<p class="card-text">
+														Marka GiardDesign to
+														wieloletnie
+														doświadczenie i wysoka
+														estetyka realizacji.
+														Oferujemy kompleksowy
+														zakres usługz
+														indywidualnym podejściem
+														do każdego projektu.
+													</p>
+													<div class="hero__buttons">
+														<a
+															href="#"
+															class="btn mb-3 p-2 btn-success"
+															>Skontaktuj się z
+															nami</a
+														>
+														<a
+															href="#"
+															class="btn mb-3 p-2 btn-outline-success"
+															>Zobacz nasze
+															realizacje
+															<i
+																class="bi bi-arrow-down"
+															></i
+														></a>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div
+											class="hero__image col-md-6 text-light"
+										>
+											<img
+												src="./images/photo-9.jpg"
+												class="object-fit-cover w-100"
+												alt="Photo in background"
+											/>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
+						<button
+							class="carousel-control-prev-hero"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="prev"
+						>
+							<span
+								class="carousel-control-prev-hero-icon"
+								aria-hidden="true"
+							></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button
+							class="carousel-control-next-hero"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="next"
+						>
+							<span
+								class="carousel-control-next-hero-icon"
+								aria-hidden="true"
+							></span>
+							<span class="visually-hidden">Next</span>
+						</button>
 					</div>
 				</div>
 			</section>
-			<section class="offer">
+			<section class="offer hidden">
 				<div class="container-lg">
 					<div
 						class="offer__content d-flex flex-column p-4 col-md-6 align-self-center text-color text-center text-lg-start align-items-center align-items-lg-start justify-content-lg-start"
@@ -218,7 +276,7 @@
 							class="col d-flex align-items-center justify-content-center"
 						>
 							<div
-								class="offer__card card text-center text-lg-start"
+								class="offer__card card text-center text-lg-start hiddenCard"
 							>
 								<div class="card-body">
 									<i class="bi bi-pencil-fill"></i>
@@ -239,7 +297,7 @@
 							class="col d-flex align-items-center justify-content-center"
 						>
 							<div
-								class="offer__card card text-center text-lg-start"
+								class="offer__card card text-center text-lg-start hiddenCard"
 							>
 								<div class="card-body">
 									<i class="bi bi-eye-fill"></i>
@@ -260,7 +318,7 @@
 							class="col d-flex align-items-center justify-content-center"
 						>
 							<div
-								class="offer__card card text-center text-lg-start"
+								class="offer__card card text-center text-lg-start hiddenCard"
 							>
 								<div class="card-body">
 									<i class="bi bi-stars"></i>
@@ -282,13 +340,13 @@
 					</div>
 				</div>
 			</section>
-			<section class="about">
+			<section class="about hidden">
 				<div class="container-fluid p-0">
 					<div class="card">
 						<div class="row g-0">
 							<div class="col-md-6">
 								<img
-									src="./images/photo-3.jpg"
+									src="./images/photo-10.jpg"
 									class="about__bg img-fluid rounded-start object-fit-cover"
 									alt="Photo in background"
 								/>
@@ -328,7 +386,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="projects" id="implementation">
+			<section class="projects hidden show" id="implementation">
 				<div class="container">
 					<div class="projects__top">
 						<span>Realizacje</span>
@@ -339,42 +397,36 @@
 					<div class="grid">
 						<div class="grid-sizer"></div>
 						<div class="grid-item grid-item--height1">
-							<img src="./images/photo-2.jpg" alt="photo 2" />
+							<img src="./images/Photo-8.png" alt="photo 2" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-8.jpg" alt="photo 8" />
+							<img src="./images/Photo-7.png" alt="photo 8" />
 						</div>
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-7.jpg" alt="photo 7" />
+							<img src="./images/Photo-6.png" alt="photo 7" />
 						</div>
 
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-12.jpg" alt="photo 2" />
+							<img src="./images/Photo-4.png" alt="photo 2" />
 						</div>
 						<div class="grid-item grid-item--height1">
-							<img src="./images/photo-1.jpg" alt="photo 1" />
+							<img src="./images/Photo-3.png" alt="photo 1" />
 						</div>
 
 						<div class="grid-item grid-item--height3">
-							<img src="./images/photo-11.jpg" alt="photo 11" />
+							<img src="./images/Photo-5.png" alt="photo 11" />
 						</div>
 
 						<div class="grid-item">
-							<img src="./images/photo-5.jpg" />
+							<img src="./images/Photo-1.png" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-10.jpg" alt="photo 10" />
+							<img src="./images/Photo-2.png" alt="photo 10" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/photo-6.jpg" alt="photo 6" />
+							<img src="./images/Photo.png" alt="photo 6" />
 						</div>
 						<div class="grid__lower">
-							<div class="grid-item">
-								<img
-									src="./images/photo-6.jpg"
-									alt="photo 13"
-								/>
-							</div>
 							<div class="grid-item">
 								<img
 									src="./images/photo-13.jpg"
@@ -445,104 +497,108 @@
 						>
 							<div class="carousel-inner">
 								<div class="modalCarusel carousel-item active">
-									<img src="./images/photo-2.jpg" alt="" />
+									<img
+										src="./images/Photo-1.png"
+										class="modalImage object-fit-contain"
+										alt=""
+									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-3.jpg"
-										class="modalImage"
+										src="./images/Photo-2.png"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-5.jpg"
-										class="modalImage"
+										src="./images/Photo-3.png"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-6.jpg"
-										class="modalImage"
+										src="./images/Photo-4.png"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-7.jpg"
-										class="modalImage"
+										src="./images/Photo-5.png"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-8.jpg"
-										class="modalImage"
+										src="./images/Photo-6.png"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/photo-9.jpg"
-										class="modalImage"
+										src="./images/Photo-7.png"
+										class="modalImage object-fit-contain"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/Photo-8.png"
+										class="modalImage object-fit-contain"
+										alt="..."
+									/>
+								</div>
+								<div class="modalCarusel carousel-item">
+									<img
+										src="./images/Photo-9.jpg"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-10.jpg"
-										class="modalImage"
-										alt="..."
-									/>
-								</div>
-								<div class="modalCarusel carousel-item">
-									<img
-										src="./images/photo-11.jpg"
-										class="modalImage"
-										alt="..."
-									/>
-								</div>
-								<div class="modalCarusel carousel-item">
-									<img
-										src="./images/photo-12.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-13.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-14.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-15.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-16.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-17.jpg"
-										class="modalImage"
+										class="modalImage object-fit-contain"
 										alt="..."
 									/>
 								</div>
@@ -559,7 +615,7 @@
 					</button>
 				</div>
 			</section>
-			<section class="social">
+			<section class="social hidden">
 				<div
 					class="social__wrapper d-flex align-items-end align-items-sm-center justify-content-center flex-column flex-lg-row container-lg bg-success text-light"
 				>
@@ -583,7 +639,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer hidden">
 			<div class="footer__wrapper container d-flex flex-column">
 				<div
 					class="footer__top d-flex align-items-center justify-content-center justify-content-lg-between flex-column flex-lg-row text-center p-4"
