--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/Photo-9.jpg"
+										src="./images/photo-9.jpg"
 										class="modalImage object-fit-contain"
 										alt="..."
 									/>
