--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+		/>
 	</head>
 	<body>
 		<header class="mainHeader d-flex justify-content-center">
