--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
 							<img src="./images/Photo-1.png" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/Photo-2.png" alt="photo 10" />
+							<img src="./images/photo-2.png" alt="photo 2 " />
 						</div>
 						<div class="grid-item">
-							<img src="./images/Photo.png" alt="photo 6" />
+							<img src="./images/photo.png" alt="photo 6" />
 						</div>
 						<div class="grid__lower">
 							<div class="grid-item">
