--- a/index.html
+++ b/index.html
@@ -504,12 +504,12 @@
 									<img
 										src="./images/Photo-1.png"
 										class="modalImage object-fit-contain"
-										alt=""
+										alt="First photo in slider"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/Photo-2.png"
+										src="./images/photo-2.png"
 										class="modalImage object-fit-contain"
 										alt="..."
 									/>
