--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<main class="main">
 			<section class="hero hidden">
 				<div class="container-fluid h-100 p-0">
-					<div id="carouselExample" class="carousel slide">
+					<div id="heroCarusel" class="carousel slide">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="card">
@@ -232,7 +232,7 @@
 						<button
 							class="carousel-control-prev-hero"
 							type="button"
-							data-bs-target="#carouselExample"
+							data-bs-target="#heroCarusel"
 							data-bs-slide="prev"
 						>
 							<span
@@ -244,7 +244,7 @@
 						<button
 							class="carousel-control-next-hero"
 							type="button"
-							data-bs-target="#carouselExample"
+							data-bs-target="#heroCarusel"
 							data-bs-slide="next"
 						>
 							<span
@@ -471,7 +471,7 @@
 					<button
 						class="carousel-control-prev"
 						type="button"
-						data-bs-target="#carouselExampleControls"
+						data-bs-target="#modalCarusel"
 						data-bs-slide="prev"
 					>
 						<span
@@ -483,7 +483,7 @@
 					<button
 						class="carousel-control-next"
 						type="button"
-						data-bs-target="#carouselExampleControls"
+						data-bs-target="#modalCarusel"
 						data-bs-slide="next"
 					>
 						<span
@@ -496,7 +496,7 @@
 						class="modal-dialog modal-dialog-centered justify-content-center"
 					>
 						<div
-							id="carouselExampleControls"
+							id="#modalCarusel"
 							class="carousel carousel-dark slide"
 						>
 							<div class="carousel-inner">
@@ -511,7 +511,7 @@
 									<img
 										src="./images/photo-2.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 2"
 									/>
 								</div>
 
@@ -519,91 +519,91 @@
 									<img
 										src="./images/Photo-3.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 3"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/Photo-4.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 4"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/Photo-5.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 5"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/Photo-6.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 6"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/Photo-7.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 7"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/Photo-8.png"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 8"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-9.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 9"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-10.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 10"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-13.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 13"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-14.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 14"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-15.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 15"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-16.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 16"
 									/>
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
 										src="./images/photo-17.jpg"
 										class="modalImage object-fit-contain"
-										alt="..."
+										alt="Photo 17"
 									/>
 								</div>
 							</div>
