--- a/index.html
+++ b/index.html
@@ -710,6 +710,6 @@
 				</div>
 			</div>
 		</footer>
-		<script type="module" src="script.js"></script>
+		<script type="module" src="./js/script.js"></script>
 	</body>
 </html>
