--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 							<img src="./images/Photo-1.png" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/Photo-2.png" alt="photo 10" />
+							<img src="./images/photo-2.png" alt="photo 10" />
 						</div>
 						<div class="grid-item">
 							<img src="./images/Photo.png" alt="photo 6" />
@@ -554,7 +554,6 @@
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/Photo-9.jpg"
 										src="./images/photo-9.jpg"
 										class="modalImage object-fit-contain"
 										alt="ninth photo in full screen"
