--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 								</div>
 								<div class="modalCarusel carousel-item">
 									<img
-										src="./images/Photo-2.png"
+										src="./images/photo-2.png"
 										class="modalImage object-fit-contain"
 										alt="second photo in fullscreen"
 									/>
