--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 							<img src="./images/photo-2.png" alt="photo 10" />
 						</div>
 						<div class="grid-item">
-							<img src="./images/Photo.png" alt="photo 6" />
+							<img src="./images/photo.png" alt="photo 6" />
 						</div>
 						<div class="grid__lower">
 							<div class="grid-item">
