--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Kontakt</a>
+								<a class="nav-link" href="#contact">Kontakt</a>
 							</li>
 							<li class="nav-item">
 								<i class="search--btn bi bi-search"></i>
@@ -147,7 +147,7 @@
 															nami</a
 														>
 														<a
-															href="#"
+															href="#implementation"
 															class="btn mb-3 p-2 btn-outline-success"
 															>Zobacz nasze
 															realizacje
@@ -614,7 +614,7 @@
 					</button>
 				</div>
 			</section>
-			<section class="social hidden">
+			<section class="social hidden" id="contact">
 				<div
 					class="social__wrapper d-flex align-items-end align-items-sm-center justify-content-center flex-column flex-lg-row container-lg bg-success text-light"
 				>
