--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<main class="main">
 			<section class="hero hidden">
 				<div class="container-fluid h-100 p-0">
-					<div id="carouselExample" class="carousel slide">
+					<div id="heroCarusel" class="carousel slide">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<div class="card">
@@ -231,7 +231,7 @@
 						<button
 							class="carousel-control-prev-hero"
 							type="button"
-							data-bs-target="#carouselExample"
+							data-bs-target="#heroCarusel"
 							data-bs-slide="prev"
 						>
 							<span
@@ -243,7 +243,7 @@
 						<button
 							class="carousel-control-next-hero"
 							type="button"
-							data-bs-target="#carouselExample"
+							data-bs-target="#heroCarusel"
 							data-bs-slide="next"
 						>
 							<span
@@ -467,7 +467,7 @@
 					<button
 						class="carousel-control-prev"
 						type="button"
-						data-bs-target="#carouselExampleControls"
+						data-bs-target="#caruselFullScreen"
 						data-bs-slide="prev"
 					>
 						<span
@@ -479,7 +479,7 @@
 					<button
 						class="carousel-control-next"
 						type="button"
-						data-bs-target="#carouselExampleControls"
+						data-bs-target="#caruselFullScreen"
 						data-bs-slide="next"
 					>
 						<span
@@ -492,7 +492,7 @@
 						class="modal-dialog modal-dialog-centered justify-content-center"
 					>
 						<div
-							id="carouselExampleControls"
+							id="caruselFullScreen"
 							class="carousel carousel-dark slide"
 						>
 							<div class="carousel-inner">
